Fix a DCHECK ordering problem in ImageOperations.

This moves a DCHECK below an ordered early out. The subset of an empty bitmap
with an empty rectangle is empty, and we should return an SkBitmap() before
performing a more general intersection check.

BUG=728736

Review-Url: https://codereview.chromium.org/2921533006
Cr-Commit-Position: refs/heads/master@{#477344}

Former-commit-id: f5ed5f60a73da4d69a1c87dfe98523bba659a7f0